$Id: History,v 1.15 1999-10-29 05:30:39 yhajime Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
29 Oct. 1999 Hajime Yoshida
- tag interfaces-V00-01-01

27 Oct. 1999 Guy Barrand
- interfaces/common/src/G4Xt.cc : protect XtAppInit against 
  shell zero widthxheight. Give a default to geometry resource.

21 Oct. 1999 John Allison
- Made XtAppContext appContext static in G4Xt.cc.  Speeds OGLSXm but
  OGLIXm is still slow - why?

12 Oct. 1999 John Allison for Hajime Yoshida (tag interfaces-V00-01-00a)
- Protection for zero length strings for Sun in G4UIterminal and G4UIGAG.

02 Sep. 1999 Hajime Yoshida
  to geant4-00-01-ref-01 (Revision 1.9)
  a new tag is interfaces-01-00-04
  after which a tag interfaces-V00-01-00 was added identical to
    interfaces-01-00-04 except for this History file.

- G4UIterminal.cc and G4UIGAG.cc now shows prompt characters
	to an input of return (or null command line).

head 31 Mai 1999  Guy Barrand
- G4VInteractorManager::SecondaryLoop : add a message to indicate
  that we enter a "viewer" secondary X event loop and that someone
  add to "Escape" it from the viewer to continue.

interfaces-01-00-03  19th April 1999  John Allison