@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4UIWin32.hh,v 1.3 1999-05-06 15:20:37 barrand Exp $
+// $Id: G4UIWin32.hh,v 1.4 1999-11-02 20:07:26 barrand Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 #ifndef G4UIWin32_h
@@ -13,7 +13,8 @@
 
 #if defined(G4UI_BUILD_WIN32_SESSION) || defined(G4UI_USE_WIN32)
 
-#include <rw/tvhdict.h>
+#include "g4std/map"
+#include "g4std/vector"
 
 #include "G4VBasicShell.hh"
 #include "G4VInteractiveSession.hh"
@@ -46,7 +47,7 @@ private:
   HWND mainWindow;
   HWND textWindow,editWindow;
   HMENU menuBar,defaultMenu;
-  RWTValHashDictionary<int,G4String> commands;
+  G4std::map<int,G4String> commands;
   void* textBuffer;
   int textRows,textCols;
   static LRESULT CALLBACK MainWindowProc(HWND,UINT,WPARAM,LPARAM);
@@ -54,7 +55,7 @@ private:
   static LRESULT CALLBACK EditWindowProc(HWND,UINT,WPARAM,LPARAM);
   G4bool fHelp;
   G4int fHelpChoice;
-  RWTValOrderedVector<G4String> fHistory;
+  G4std::vector<G4String> fHistory;
   int fHistoryPos;
 };
 
